--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         </ul>
                         </nav>
                         <address>
-                            <a href="info@devstudio.com">info@devstudio.com</a><br>
+                            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
                             <a href="tel:+14251234563">+1(425) 123-45-63</a>
                         </address>
                 </header>
