--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
             </head>
             <body>
                 <header>
-                    <a href="/">
-                        <img src="/images/logotype.svg" alt="logo" width="115" height="24"></a>
+                    <a href="./index.html">WebStudio</a>
                         <nav>
                         <ul>
                             <li>Studio</li>
