--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
                         <nav>
                     <a href="./index.html">WebStudio</a>
                         <ul>
-                            <li>Studio</li>
-                            <li>Portfolio</li>
-                            <li>Contacts</li>
+                            <li><a href="">Studio</a></li>
+                            <li><a href="">Portfolio</a></li>
+                            <li><a href="">Contacts</a></li>
                         </ul>
                         </nav>
                         <address>
-                            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-                            <a href="tel:+14251234563">+1(425) 123-45-63</a>
+                            <ul>
+                            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a><br></li>
+                            <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                            </ul>
                         </address>
                 </header>
                 <main>
