--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
                         </address>
                 </header>
                 <main>
+                    <section> 
                     <h1>Effective Solutions for Your Business</h1>
                     <button type="button">Order Service</button>
+                    </section>
+                    <section>
                     <ul>
                         <li>
                             <h3>Strategy</h3>
@@ -42,6 +45,8 @@
                             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                         </li>
                     </ul>
+                    </section>
+                    <section> 
                     <h2>What are we doing</h2>
                     <ul>
                         <li>
@@ -54,6 +59,8 @@
                             <img src="/images/telecom.jpg" alt="computer" width="360" height="300">
                         </li>
                     </ul>
+                    </section>
+                    <section> 
                     <h2>Our Team</h2>
                     <ul>
                         <li>
@@ -77,11 +84,10 @@
                             <p>UI Designer</p>
                         </li>
                     </ul>
+                    </section>
                 </main>
                 <footer>
-                    <a href="/">
-                        <img src="/images/logotype.svg" alt="Logo" width="115" height="24">
-                    </a>
+                    <a href="./index.html">WebStudio</a>
                     <p>
                         Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                     </p>
