--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                     <h1>Effective Solutions for Your Business</h1>
                     <button type="button">Order Service</button>
                     </section>
-                    <section>
                     <ul>
                         <li>
                             <h3>Strategy</h3>
@@ -45,8 +44,6 @@
                             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                         </li>
                     </ul>
-                    </section>
-                    <section> 
                     <h2>What are we doing</h2>
                     <ul>
                         <li>
@@ -59,8 +56,6 @@
                             <img src="/images/telecom.jpg" alt="computer" width="360" height="300">
                         </li>
                     </ul>
-                    </section>
-                    <section> 
                     <h2>Our Team</h2>
                     <ul>
                         <li>
@@ -84,10 +79,11 @@
                             <p>UI Designer</p>
                         </li>
                     </ul>
-                    </section>
                 </main>
                 <footer>
-                    <a href="./index.html">WebStudio</a>
+                    <a href="/">
+                        <img src="/images/logotype.svg" alt="Logo" width="115" height="24">
+                    </a>
                     <p>
                         Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                     </p>
