--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
                             <li><a href="">Contacts</a></li>
                         </nav>
                         <address>
-                            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a><br></li>
-                            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                        </ul>
+                            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                            </ul>
                         </address>
                 </header>
                 <main>
+                    <section> 
                     <h1>Effective Solutions for Your Business</h1>
                     <button type="button">Order Service</button>
                     <ul>
