--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
                             <li><a href="">Studio</a></li>
                             <li><a href="">Portfolio</a></li>
                             <li><a href="">Contacts</a></li>
-                        
-                       <address>
-                        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                       </address>
                         </nav>
+                       <address>
+                        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                       </address>  
                 </header>
                 <main>
                     <section> 
