--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
             </head>
             <body>
                 <header>
-                        <nav>
-                    <a href="./index.html">WebStudio</a>
+                    <nav>
+                        <a href="./index.html">WebStudio</a>
                         <ul>
                             <li><a href="">Studio</a></li>
                             <li><a href="">Portfolio</a></li>
                             <li><a href="">Contacts</a></li>
-                        </nav>
-                       <address>
-                        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                       </address>  
+                        </ul>     
+                    </nav>
+                    <address>
+                        <ul>
+                        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                        </ul>
+                    </address>
                 </header>
                 <main>
 
                 </main>
                 <footer>
-                    
+
                 </footer>
             </body>
         </html>
