--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
                 </main>
                 <footer>
-
+                    <a href="./index.html">WebStudio</a>
+                    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
                 </footer>
             </body>
         </html>
