--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
                     </address>
                 </header>
                 <main>
-
+                    <section>
+                        <h1>Effective Solutions for Your Business</h1>
+                        <button type="button">Order Service</button>
+                    </section>
                 </main>
                 <footer>
-                    <a href="./index.html">WebStudio</a>
-                    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                    <!-- <a href="./index.html">WebStudio</a>
+                    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p> -->
                 </footer>
             </body>
         </html>
