--- a/index.html
+++ b/index.html
@@ -27,10 +27,19 @@
                         <h1>Effective Solutions for Your Business</h1>
                         <button type="button">Order Service</button>
                     </section>
+                    <section>
+
+                    </section>
+                    <section>
+
+                    </section>
+                    <section>
+                        
+                    </section>
                 </main>
                 <footer>
-                    <!-- <a href="./index.html">WebStudio</a>
-                    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p> -->
+                    <a href="./index.html">WebStudio</a>
+                    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
                 </footer>
             </body>
         </html>
