--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <button type="button">Order Service</button>
                     </section>
                     <section>
-                        <h2></h2>
+                        <h2>не може бути пустим</h2>
                         <ul>
                             <li>
                                 <h3>Strategy</h3>
@@ -47,6 +47,45 @@
                                 <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                             </li>
                         </ul>
+                   </section>
+                   <section>
+                    <h2>What are we doing</h2>
+                    <ul>
+                        <li>
+                            <img src="/images/rec.jpg" alt="computer" width="360" height="300">
+                        </li>
+                        <li>
+                            <img src="/images/telef.jpg" alt="telefon" width="360" height="300">
+                        </li>
+                        <li>
+                            <img src="/images/telecom.jpg" alt="computer" width="360" height="300">
+                        </li>
+                    </ul>
+                   </section>
+                   <section>
+                    <h2>Our Team</h2>
+                    <ul>
+                        <li>
+                            <img src="/images/img.jpg" alt="Mark Guerrero" width="264" height="260">
+                            <h3>Mark Guerrero</h3>
+                            <p>Product Designer</p>
+                        </li>
+                        <li>
+                            <img src="/images/tomm.jpg" alt="Tom Ford" width="264" height="260">
+                            <h3>Tom Ford</h3>
+                            <p>Frontend Developer</p>
+                        </li>
+                        <li>
+                            <img src="/images/cam.jpg" alt="Camila Garcia" width="264" height="260">
+                            <h3>Camila Garcia</h3>
+                            <p>Marketing</p>
+                        </li>
+                        <li>
+                            <img src="/images/dan.jpg" alt="Daniel Wilson" width="264" height="260">
+                            <h3>Daniel Wilson</h3>
+                            <p>UI Designer</p>
+                        </li>
+                    </ul>
                    </section>
                 </main>
                 <footer>
