--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                     <h2>What are we doing</h2>
                     <ul>
                         <li>
-                            <img src="/images/rec.jpg" alt="computer" width="360" height="300">
+                            <img src="./images/rec.jpg" alt="computer" width="360" height="300">
                         </li>
                         <li>
-                            <img src="/images/telef.jpg" alt="telefon" width="360" height="300">
+                            <img src="./images/telef.jpg" alt="telefon" width="360" height="300">
                         </li>
                         <li>
-                            <img src="/images/telecom.jpg" alt="computer" width="360" height="300">
+                            <img src="./images/telecom.jpg" alt="computer" width="360" height="300">
                         </li>
                     </ul>
                    </section>
@@ -66,22 +66,22 @@
                     <h2>Our Team</h2>
                     <ul>
                         <li>
-                            <img src="/images/img.jpg" alt="Mark Guerrero" width="264" height="260">
+                            <img src="./images/img.jpg" alt="Mark Guerrero" width="264" height="260">
                             <h3>Mark Guerrero</h3>
                             <p>Product Designer</p>
                         </li>
                         <li>
-                            <img src="/images/tomm.jpg" alt="Tom Ford" width="264" height="260">
+                            <img src="./images/tomm.jpg" alt="Tom Ford" width="264" height="260">
                             <h3>Tom Ford</h3>
                             <p>Frontend Developer</p>
                         </li>
                         <li>
-                            <img src="/images/cam.jpg" alt="Camila Garcia" width="264" height="260">
+                            <img src="./images/cam.jpg" alt="Camila Garcia" width="264" height="260">
                             <h3>Camila Garcia</h3>
                             <p>Marketing</p>
                         </li>
                         <li>
-                            <img src="/images/dan.jpg" alt="Daniel Wilson" width="264" height="260">
+                            <img src="./images/dan.jpg" alt="Daniel Wilson" width="264" height="260">
                             <h3>Daniel Wilson</h3>
                             <p>UI Designer</p>
                         </li>
